--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,10 @@ branches:
 deploy:
   provider: pages
   skip_cleanup: true
-  # 在项目仪表盘的 Settings -> Environment Variables 中配置
   github_token: $GITHUB_TOKEN
-  # 将 build 目录下的内容推送到默认的 gh-pages 分支上，并不会连带 build 目录一起
   local_dir: build
-  #fqdn: $CUSTOM_DOMAIN
-  # name: $GIT_NAME
-  # email: $GIT_EMAIL
+  fqdn: $CUSTOM_DOMAIN
+  name: $GIT_NAME
+  email: $GIT_EMAIL
   on:
     branch: master
